// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leaderboard Component > Basic Rendering > should render Leaderboard excluding podium 1`] = `
<div>
  <div
    class="leaderboard"
  >
    <div
      class="row"
      style="--row-index: 0;"
    >
      <div
        class="column position"
      >
        <span
          class="badge"
        >
          4
        </span>
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player4
        </span>
      </div>
      <span
        class="column streaks"
      />
      <div
        class="column score"
      >
        40
      </div>
    </div>
    <div
      class="row"
      style="--row-index: 1;"
    >
      <div
        class="column position"
      >
        <span
          class="badge"
        >
          5
        </span>
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player5
        </span>
      </div>
      <div
        class="column score"
      >
        20
      </div>
    </div>
  </div>
</div>
`;

exports[`Leaderboard Component > Basic Rendering > should render Leaderboard including podium 1`] = `
<div>
  <div
    class="leaderboard"
  >
    <div
      class="row gold topPosition"
      style="--row-index: 0;"
    >
      <div
        class="column position"
      >
        <span
          class="badge"
        >
          1
        </span>
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player1
        </span>
      </div>
      <span
        class="column streaks"
      >
        <div
          class="streakBadge"
        >
          <div
            class="badge small border"
            style="background-color: white; outline-color: white;"
          >
            5
          </div>
        </div>
      </span>
      <div
        class="column score"
      >
        100
      </div>
    </div>
    <div
      class="row silver topPosition"
      style="--row-index: 1;"
    >
      <div
        class="column position"
      >
        <span
          class="badge"
        >
          2
        </span>
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player2
        </span>
      </div>
      <span
        class="column streaks"
      >
        <div
          class="streakBadge"
        >
          <div
            class="badge small border"
            style="color: white;"
          >
            3
          </div>
        </div>
      </span>
      <div
        class="column score"
      >
        80
      </div>
    </div>
    <div
      class="row bronze topPosition"
      style="--row-index: 2;"
    >
      <div
        class="column position"
      >
        <span
          class="badge"
        >
          3
        </span>
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player3
        </span>
      </div>
      <span
        class="column streaks"
      >
        <div
          class="streakBadge"
        >
          <div
            class="badge small border"
            style="background-color: white; outline-color: white;"
          >
            2
          </div>
        </div>
      </span>
      <div
        class="column score"
      >
        60
      </div>
    </div>
    <div
      class="row"
      style="--row-index: 3;"
    >
      <div
        class="column position"
      >
        <span
          class="badge"
        >
          4
        </span>
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player4
        </span>
      </div>
      <span
        class="column streaks"
      />
      <div
        class="column score"
      >
        40
      </div>
    </div>
    <div
      class="row"
      style="--row-index: 4;"
    >
      <div
        class="column position"
      >
        <span
          class="badge"
        >
          5
        </span>
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player5
        </span>
      </div>
      <div
        class="column score"
      >
        20
      </div>
    </div>
  </div>
</div>
`;
